upgrade dependencies and apply changes